--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node src/index.ts"
   },
   "devDependencies": {
+    "@types/node": "^14.14.10",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "eslint": "^7.14.0",
